fixes dangling underline between share icons. fixes spacing in share title.

--- a/css/main.scss
+++ b/css/main.scss
@@ -554,6 +554,14 @@ i.fa-1_5x {
 
 .share-container {
   margin-top: 35px;
+  h3.share-title {
+    margin-bottom: 4px;
+  }
+  .share-icon-container {
+    a {
+      text-decoration: none;
+    }
+  }
 }
 
 .swipebox-gallery {
